--- a/XrayTEXT/MainWin.xaml
+++ b/XrayTEXT/MainWin.xaml
@@ -66,7 +66,7 @@
             </Grid>
         </DataTemplate>
 
-        <!-- Main photo catalog view -->
+        <!-- 썸네일 보기 -->
         <Style TargetType="{x:Type ListBox}" x:Key="PhotoListBoxStyle">
             <Setter Property="Foreground" Value="White" />
             <Setter Property="Template">
@@ -81,10 +81,19 @@
             </Setter>
         </Style>
 
-        <!--<Style TargetType="{x:Type Canvas}" x:Key="XcanvasStyle"
-               Height="{Binding ElementName=ZoomImage, Path='Value'}" 
-               Width="{Binding ElementName=ZoomImage, Path='Value'}" >
-        </Style>-->
+        <Style TargetType="{x:Type ListBox}" x:Key="PhotoListBoxStyle2">
+            <Setter Property="Foreground" Value="LightGray" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ListBox}" >
+                        <WrapPanel Margin="3" IsItemsHost="True" Orientation="Horizontal" 
+                       ItemHeight="{Binding ElementName=ZoomSlider, Path='Value'}" 
+                       ItemWidth="{Binding ElementName=ZoomSlider, Path='Value'}" 
+                       VerticalAlignment="Top" HorizontalAlignment="Stretch" />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
 
 
         <!-- Style for an individual generic item -->
@@ -106,61 +115,6 @@
             </Setter>
         </Style>
 
-        <!-- 토글 -->
-        <Style x:Key="AnimatedSwitch" TargetType="{x:Type ToggleButton}">
-            <Setter Property="Foreground" Value="Black" />
-            <Setter Property="Background" Value="#FAFAFB" />
-            <Setter Property="BorderBrush" Value="#EAEAEB" />
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="ToggleButton">
-                        <Viewbox Stretch="Uniform">
-                            <Canvas Name="Layer_1" Width="20" Height="20" Canvas.Left="10" Canvas.Top="0">
-                                <Ellipse  Canvas.Left="0" Width="20" Height="20" Fill="{TemplateBinding Background}" Stroke="{TemplateBinding BorderBrush}" StrokeThickness="0.5"/>
-                                <Ellipse  Canvas.Left="15" Width="20" Height="20" Fill="{TemplateBinding Background}" Stroke="{TemplateBinding BorderBrush}" StrokeThickness="0.5"/>
-                                <Border Canvas.Left="10" Width="15" Height="20" Name="rect416927" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="0,0.5,0,0.5"/>
-                                <Ellipse x:Name="ellipse"  Canvas.Left="0" Width="20" Height="20" Fill="White" Stroke="{TemplateBinding BorderBrush}" StrokeThickness="0.3">
-                                    <Ellipse.RenderTransform>
-                                        <TranslateTransform X="0" Y="0" />
-                                    </Ellipse.RenderTransform>
-                                    <Ellipse.BitmapEffect>
-                                        <DropShadowBitmapEffect Softness="0.1" ShadowDepth="0.7" Direction="270" Color="#BBBBBB"/>
-                                    </Ellipse.BitmapEffect>
-                                </Ellipse>
-                            </Canvas>
-                        </Viewbox>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsChecked" Value="True" >
-                                <Trigger.EnterActions>
-                                    <BeginStoryboard>
-                                        <Storyboard>
-                                            <ColorAnimation Storyboard.TargetProperty="Background.Color" To="#52D468" Duration="0:0:0.2" />
-                                            <ColorAnimation Storyboard.TargetProperty="BorderBrush.Color" To="#41C955" Duration="0:0:0.2" />
-                                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(Ellipse.RenderTransform).(TranslateTransform.X)" Storyboard.TargetName="ellipse">
-                                                <SplineDoubleKeyFrame KeyTime="0" Value="0"/>
-                                                <SplineDoubleKeyFrame KeyTime="0:0:0.4" Value="15" KeySpline="0, 1, 0.6, 1"/>
-                                            </DoubleAnimationUsingKeyFrames>
-                                        </Storyboard>
-                                    </BeginStoryboard>
-                                </Trigger.EnterActions>
-                                <Trigger.ExitActions>
-                                    <BeginStoryboard>
-                                        <Storyboard>
-                                            <ColorAnimation Storyboard.TargetProperty="Background.Color" To="#FAFAFB" Duration="0:0:0.2" />
-                                            <ColorAnimation Storyboard.TargetProperty="BorderBrush.Color" To="#EAEAEB" Duration="0:0:0.2" />
-                                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(Ellipse.RenderTransform).(TranslateTransform.X)" Storyboard.TargetName="ellipse">
-                                                <SplineDoubleKeyFrame KeyTime="0" Value="15"/>
-                                                <SplineDoubleKeyFrame KeyTime="0:0:0.3" Value="0" KeySpline="0, 0.5, 0.5, 1"/>
-                                            </DoubleAnimationUsingKeyFrames>
-                                        </Storyboard>
-                                    </BeginStoryboard>
-                                </Trigger.ExitActions>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
 
         <!-- 버튼 -->
         <Style x:Key="ButtonFocusVisual">
@@ -369,14 +323,9 @@
                                     ItemsSource="{Binding}" 
                                     SelectedIndex="0" 
                                     MouseDoubleClick="OnPhotoDblClick" Width="180" >
-                                    <!--<StackPanel Orientation="Vertical">
-                                        <Image Source="{Binding}"/>
-                                    </StackPanel>-->
                                     <!--<ListBox.ContextMenu>
                                         <ContextMenu>
-                                            -->
-                                    <!--<MenuItem Header="삭제" Click="deletePhoto"/>-->
-                                    <!--
+                                            <MenuItem Header="삭제" Click="deletePhoto"/>
                                         </ContextMenu>
                                     </ListBox.ContextMenu>-->
                                 </ListBox>
@@ -591,7 +540,7 @@
 
                     <DockPanel Grid.Row="0" Grid.Column="4" Margin="0">
                         <!--<Label Name="LblShowHide" Margin="0,5,0,0" Width="80">라벨보이기</Label>-->
-                        <!--<ToggleButton Name="TbLabelShowHide" Style="{StaticResource AnimatedSwitch}" Width="60" Height="30"
+                        <!--<ToggleButton Name="TbLabelShowHide"  Width="60" Height="30"
                             Command="{Binding CmdTbLabelShowHide}" 
                             CommandParameter="{Binding IsChecked,RelativeSource={RelativeSource Self}}" >
                         </ToggleButton>-->
