--- a/XrayTEXT/MemoSearchWin.xaml
+++ b/XrayTEXT/MemoSearchWin.xaml
@@ -2,13 +2,15 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:XrayTEXT"
-        Title="질병명 검색" Height="200" Width="300">
+        Title="질병명 검색" Height="200" Width="300"
+        Loaded="OnLoaded">
     <StackPanel Background="#FFF2F9FF">
         <DockPanel Height="40" Margin="0,0,0,0">
             <Button Name="btn_clear" Height="23" Width="75" Margin="20,0" Click="btn_clear_Click" HorizontalAlignment="Left">초기화</Button>
             <Button Name="btn_accept" Height="23" Width="75" Margin="20,0" Click="btn_accept_Click" HorizontalAlignment="Right">적용</Button>
         </DockPanel>
 
-        <local:AutoCompleteTextBox Height="23" Width="240" x:Name="textBox1" DelayTime="500" Threshold="2"/>
+        <local:AutoCompleteTextBox Height="23" Width="240" x:Name="textBox1" DelayTime="500" Threshold="2">
+        </local:AutoCompleteTextBox>
     </StackPanel>
 </Window>
