- UI 이전 이후 버튼 추가 --> 100% - 확대 / 축소 - 슬라이더(줌바)로 표현 --> 100% - 라벨숨기기 - 기능(이미지보기) - 숨기기(보이기) 버튼 추가(레이어 숨김) --> 100% - 마지막 저장 했던 내용 (작업이 되었는지 안되었는지 표시) - 배경색상 파랑,빨강으로 표시 되도록 변경  --> 100% - 소견 입력 양식 용 관리자 (수정 삭제 추가) --> 100% - 이미지에 대한 : 정상/비정상(버튼)의 기능 필요(토글) 정상 비정 상에 따라 소견 입력 아예 안되게  --> 100% - 질환 유무 : 각 소견의 첫번째 (질환명 을 / 로 보여준다.) --> 100% - 소견 입력 양식 : 질환명/분류/(소견) --> 100%
- UI 사용자 메뉴얼 (차후)

--- a/XrayTEXT/MemoCRUDWin.xaml
+++ b/XrayTEXT/MemoCRUDWin.xaml
@@ -25,7 +25,7 @@
         </DockPanel>
 
 
-        <Button Content="저장" Name="Cmd_Save" HorizontalAlignment="Left" Margin="285,42,0,0" VerticalAlignment="Top" Width="70" Height="41" Click="Cmd_Save_Click"/>
+        <Button Content="추가" Name="Cmd_Save" HorizontalAlignment="Left" Margin="285,42,0,0" VerticalAlignment="Top" Width="70" Height="41" Click="Cmd_Save_Click"/>
         <Button Content="삭제" Name="Cmd_Delete" HorizontalAlignment="Left" Margin="365,42,0,0" VerticalAlignment="Top" Width="70" Height="41" Click="Cmd_Del_Click"/>
         <Button Content="조회" Name="Cmd_Load" HorizontalAlignment="Left" Margin="445,42,0,0" VerticalAlignment="Top" Width="70" Height="41" Click="Cmd_Load_Click"/>
 
