--- a/XrayTEXT/MainWin.xaml
+++ b/XrayTEXT/MainWin.xaml
@@ -377,9 +377,9 @@
                             <ScrollViewer x:Name="ImageScrollViewer" Margin="0,0,0,0"
                                 ScrollViewer.HorizontalScrollBarVisibility="Visible" ScrollViewer.VerticalScrollBarVisibility="Visible" >
                                 <Grid x:Name="root" Background="White" >
-                                    <Canvas Name="Xcanvas" MinWidth="1500" MinHeight="900" >
+                                    <Canvas Name="Xcanvas" MinWidth="1528" MinHeight="1256" >
                                         <!-- VerticalAlignment="Center" HorizontalAlignment="Center" -->
-                                        <Image Name="ViewedPhoto" Width="1500" Height="900" Margin="0" Stretch="UniformToFill" >
+                                        <Image Name="ViewedPhoto" Width="1528" Height="1256" Margin="0" Stretch="UniformToFill" >
                                             <Image.RenderTransform>
                                                 <ScaleTransform x:Name="Zoom" ScaleX="1" ScaleY="1">
 
@@ -477,7 +477,7 @@
                 </DockPanel>
 
                 <DockPanel Grid.Column="2" Grid.Row="2">
-                    <Button Name="leftBtn" Width="45" Margin="10,0,0,0" Click="OnleftBtnClick">
+                    <Button Name="leftBtn" Width="45" Margin="10,0,0,0" Click="OnleftBtnClick" ToolTip="이전 사진">
                         <ContentControl>
                             <StackPanel Orientation="Horizontal" Width="Auto" HorizontalAlignment="Left">
                                 <Image Source="l-arrows.png" Margin="0,0,0,0" Width="40" Height="30" />
@@ -487,7 +487,7 @@
                     <Button Name="rightBtn" Width="40" HorizontalAlignment="Right" Margin="0,0,10,0" Click="OnrightBtnClick">
                         <ContentControl>
                             <StackPanel Orientation="Horizontal" Width="Auto" HorizontalAlignment="Left">
-                                <Image Source="r-arrows.png" Margin="0,0,0,0" Width="40" Height="30" />
+                                <Image Source="r-arrows.png" Margin="0,0,0,0" Width="40" Height="30"  ToolTip="이후 사진" />
                             </StackPanel>
                         </ContentControl>
                     </Button>
@@ -499,33 +499,40 @@
                         <RowDefinition Height="50" />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="270"></ColumnDefinition>
-                        <ColumnDefinition Width="400"></ColumnDefinition>
+                        <ColumnDefinition Width="320"></ColumnDefinition>
+                        <ColumnDefinition Width="280"></ColumnDefinition>
                         <ColumnDefinition Width="220"></ColumnDefinition>
                         <ColumnDefinition Width="180"></ColumnDefinition>
                         <ColumnDefinition Width="160"></ColumnDefinition>
                         <ColumnDefinition Width="*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <!-- 페이징 -->
-                    <DockPanel DockPanel.Dock="Bottom" Margin="5,5,0,5" Width="260" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left">
+                    <DockPanel DockPanel.Dock="Bottom" Margin="0,5,0,10" Width="320" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left">
                         <Label DockPanel.Dock="Left" FontSize="12" Margin="0,5,0,0">총파일수</Label>
                         <TextBox Name="TxtTotalFileCnt" x:FieldModifier="public"
 	                        Width="40" Height="20" Margin="0,0" Text="0" IsReadOnly="True"></TextBox>
 
-                        <Label DockPanel.Dock="Left" FontSize="12" Margin="0,5,0,0">페이지</Label>
+                        <Button Margin="5,5,5,5" Width="30" Click="OnPageChangePreClick" Style="{StaticResource InformButton}" ToolTip="이전 페이지">◀</Button>
+
                         <TextBox Name="TxtCurPage" x:FieldModifier="public" 
-	                        Width="25" Height="20" Margin="0,5" Text="1" 
+	                        Width="22" Height="20" Margin="0,5" Text="1" 
                                  PreviewTextInput="tb_OnlyNum_KeyPress"
-                                 ></TextBox>
-                        <Button Margin="0,5" Width="89" Click="OnPageChangeClick" HorizontalAlignment="Right" Style="{StaticResource InformButton}" >페이지이동</Button>
+                        ></TextBox>
+                        <Label DockPanel.Dock="Left" FontSize="11" Margin="0,5,0,0">페이지로</Label>
+
+                        <Button Margin="1,5,5,5" Width="59" Click="OnPageChangeClick" Style="{StaticResource InformButton}" ToolTip="페이지 이동">이동</Button>
+
+                        <Button Margin="5,5,5,5" Width="30" Click="OnPageChangeNxtClick" Style="{StaticResource InformButton}"  ToolTip="다음 페이지">▶</Button>
+
                     </DockPanel>
 
                     <!-- 이미지경로 변경 -->
-                    <DockPanel DockPanel.Dock="Bottom" Margin="1,5" Width="400" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left">
+                    <DockPanel DockPanel.Dock="Bottom" Margin="10,5,0,10" Width="260" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left">
                         <!-- 이미지경로 -->
-                        <TextBox Name="ImagesDir" Margin="0,5,0,5" Width="320" Text="D:\XrayMarker\images" />
+                        <TextBox Name="ImagesDir" Margin="0,5,0,5" Width="170" Text="D:\XrayMarker\images" />
                         <!-- 이미지경로 변경 버튼 -->
-                        <Button Margin="0,0,0,0" Width="75" Height="40" Click="OnImagesDirChangeClick" Style="{StaticResource InformButton}">폴더변경</Button>
+                        <Button Margin="0,5,0,5" Width="60" 
+                                Click="OnImagesDirChangeClick" Style="{StaticResource InformButton}">폴더변경</Button>
                     </DockPanel>
 
                     <!-- zoom 변경 -->
@@ -533,7 +540,7 @@
                         <Label DockPanel.Dock="Left" FontSize="12" Margin="10,5,0,0">Zoom:</Label>
                         <Slider Name="ZoomImage" 
                             Margin="10,5,0,0" Orientation="Horizontal" 
-                            Minimum="40" Maximum="180" 
+                            Minimum="20" Maximum="280" 
                             Value="100" TickFrequency="80"
                             TickPlacement="BottomRight" SmallChange="5"
                             LargeChange="20" Width="100" FontSize="12" ValueChanged="OnZoomImage_ValueChanged" />
